# 100J

./: .gitignore  100j_frontend_redesign_v1.html  100j_swiftui_frontend_redesign_blueprint_v1.md  AUDIT_v1.md  PROJECT_PLAN.md  README.md  RELEASE_NOTES_v1.1.md  UI_POLISH_v1.md  deployment.md  docker-compose.yml  personal_affairs_backend_blueprint_v1.md  personal_affairs_frontend_blueprint_v1.md  plan.md  v1.1_final_plan.md  新前端面板演示.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_pending_confirmations.py  0003_v11_auth_and_limits.py  0004_seed_demo_source.py  0005_device_sessions.py  0006_refresh_token_jti.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  errors.py  rate_limit.py  security.py
backend/app/models/: __init__.py  agent_action_log.py  agent_pending_confirmation.py  calendar_item.py  device_session.py  device_token.py  email_otp.py  llm_provider_key.py  mixins.py  note.py  project.py  refresh_token_jti.py  space.py  task.py  user.py
backend/app/schemas/: agent.py  auth.py  calendar_item.py  common.py  device.py  (+6 more)
backend/scripts/: check_alembic_drift.py  migrate_llm_keys_v124.py  phase4_smoke.py
backend/tests/: conftest.py  openapi_snapshot.json  test_agent.py  test_alembic_drift.py  test_apple_auth.py  test_auth_spaces.py  test_auth_v11.py  test_business_rules.py  test_config.py  test_local_owner.py  test_openapi.py  test_rate_limit.py  test_seed_demo.py
(+174 files in other folders)
