[project]
name = "personal-affairs-backend"
version = "0.1.0"
description = "Personal Affairs App backend v1"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13.2",
    "bcrypt<5.0.0",
    "cryptography>=43.0.0",
    "email-validator>=2.1.1",
    "fastapi>=0.111.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "ruff>=0.5.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
